[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bitnet-api"
version = "0.1.0"
description = "Client for Microsoft BitNet Demo API"
authors = [{ name="Axel Sheire", email="sheireaxel@gmail.com" }]
license = { text = "GPL-3.0-or-later" }
readme = "README.md"
requires-python = ">=3.7"
keywords = ["bitnet", "ai", "microsoft", "api", "llm"]
dependencies = ["requests>=2.25"]

[project.urls]
"Homepage" = "https://github.com/umm-dev/bitnet-api"
"Source" = "https://github.com/umm-dev/bitnet-api"
